[Nikita Solosniuk] 03_html-css-part-1

--- a/classworks/nikita-solosniuk/03_html_css_part-2/boilerplate/package.json
+++ b/classworks/nikita-solosniuk/03_html_css_part-2/boilerplate/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "postcss-nested": "^3.0.0",
     "webpack": "^3.10.0"
   },
   "devDependencies": {
