--- a/classworks/aliona-mozol/03_html_BEM/prologue_update/package.json
+++ b/classworks/aliona-mozol/03_html_BEM/prologue_update/package.json
@@ -22,6 +22,7 @@
     "postcss-csso": "^3.0.0",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.10",
+    "postcss-nested": "^3.0.0",
     "reload-html-webpack-plugin": "^0.1.2",
     "style-loader": "^0.19.1",
     "webpack-dev-server": "^2.11.1"
