--- a/classworks/pavel-kalugin/06_es6/package.json
+++ b/classworks/pavel-kalugin/06_es6/package.json
@@ -6,22 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint --fix ./*.mjs",
-    "build": "babel ./*.js -d dist",
     "start": "node --experimental-modules index.mjs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
     "eslint": "^4.16.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0"
   },
-  "babel": {
-    "presets": [
-      "env"
-    ]
-  }
+  "dependencies": {}
 }
