--- a/classworks/nikita-solosniuk/07_react-part-1/issues/package.json
+++ b/classworks/nikita-solosniuk/07_react-part-1/issues/package.json
@@ -7,6 +7,7 @@
     "classnames": "^2.2.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0"
   },
   "scripts": {
