--- a/classworks/nikita-solosniuk/06_es6/package.json
+++ b/classworks/nikita-solosniuk/06_es6/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lol": "eslint index.mjs"
+    "ivankopetuh": "eslint --fix ./.mjs"
   },
   "keywords": [],
   "author": "",
