--- a/classworks/aliona-mozol/08_react_2/my-app/package.json
+++ b/classworks/aliona-mozol/08_react_2/my-app/package.json
@@ -8,7 +8,9 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.0"
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
