--- a/classworks/polina-rudenko/06_ES6/package.json
+++ b/classworks/polina-rudenko/06_ES6/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint index.mjs"
- },
+    "lint": "eslint *.mjs"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
