--- a/classworks/yegor-koren/07_react-1/package.json
+++ b/classworks/yegor-koren/07_react-1/package.json
@@ -10,6 +10,8 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "stylelint": "^7.10.1",
     "stylelint-config-standard": "^16.0.0"
