--- a/classworks/aliona-mozol/10_node/task/package.json
+++ b/classworks/aliona-mozol/10_node/task/package.json
@@ -1,7 +1,6 @@
 {
   "name": "task",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,5 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "nodemon": "^1.14.12"
-  }
+  },
+  "description": ""
 }
