Delete console logs

--- a/classworks/pavel-kalugin/09_redux/my-app/package.json
+++ b/classworks/pavel-kalugin/09_redux/my-app/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test-lint:js": "eslint --ext=js --ext=jsx .",
+    "test-lint:js": "babel-eslint --ext=js --ext=jsx .",
     "test:lint:css": "stylelint \"**/*.css\"",
     "test:unit": "react-scripts test --env=jsdom",
     "test": "run-s test:**",
