--- a/classworks/pavel-kalugin/09_redux/my-app/.eslintrc.json
+++ b/classworks/pavel-kalugin/09_redux/my-app/.eslintrc.json
@@ -4,5 +4,9 @@
     "browser": true,
     "jest": true
   },
-  "parser": "babel-eslint"
+  "parser": "babel-eslint",
+  "rules": {
+    "jsx-a11y/anchor-is-valid": 0,
+    "react/jsx-filename-extension": 0
+  }
 }
