--- a/classworks/anna_korosteleva/06_es6/package.json
+++ b/classworks/anna_korosteleva/06_es6/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "eslint": "eslint index.mjs"
+    "eslint": "eslint --fix ./.mjs"
   },
   "author": "",
   "license": "ISC",
