--- a/classworks/evgeny-marushko/11_koa/package.json
+++ b/classworks/evgeny-marushko/11_koa/package.json
@@ -10,10 +10,10 @@
   "author": "Evgeny Marushko",
   "license": "ISC",
   "dependencies": {
-    "@paralect/common-logger": "0.1.10",
-    "@paralect/node-mongo": "0.3.0",
     "app-module-path": "2.2.0",
     "async-busboy": "^0.6.2",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "joi": "13.0.2",
     "kcors": "2.2.1",
     "koa": "2.4.1",
@@ -28,7 +28,9 @@
     "koa-session": "^5.8.1",
     "koa-static": "^4.0.2",
     "koa-validate": "1.0.7",
+    "koa-webpack": "^2.0.3",
     "nodemon": "1.12.1",
-    "randomstring": "^1.1.5"
+    "randomstring": "^1.1.5",
+    "webpack": "^3.10.0"
   }
 }
