--- a/classworks/aliona-mozol/11_koa/task/package.json
+++ b/classworks/aliona-mozol/11_koa/task/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.17.1",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "config": "^1.29.4",
     "cowsay": "^1.2.1",
     "css-loader": "^0.28.9",
@@ -22,6 +24,7 @@
     "koa-logger": "^3.1.0",
     "koa-mount": "^3.0.0",
     "koa-redis": "^3.1.2",
+    "koa-router": "^7.4.0",
     "koa-session": "^5.8.1",
     "koa-static": "^4.0.2",
     "koa-views": "^6.1.3",
