--- a/classworks/pavel-kalugin/11_koa/package.json
+++ b/classworks/pavel-kalugin/11_koa/package.json
@@ -5,19 +5,29 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node web/server/app.js"
+    "start": "node web/server/app.js",
+    "webpack": "webpack"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.17.1",
+    "babel": "^6.23.0",
+    "babel-loader": "^7.1.2",
+    "gulp": "^3.9.1",
     "joi": "^13.1.2",
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.4.0",
     "koa-session": "^5.8.1",
     "koa-static": "^4.0.2",
+    "router": "^1.3.2",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^2.30.1",
     "koa-webpack": "^2.0.3",
-    "webpack": "^3.10.0"
+    "webpack-hot-middleware": "^2.21.0"
   }
 }
