--- a/classworks/yegor-koren/08_react-2/package.json
+++ b/classworks/yegor-koren/08_react-2/package.json
@@ -10,6 +10,7 @@
     "eslint-plugin-react": "*",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-classnames": "^0.1.2",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
