--- a/classworks/artyom-tsurkan/11_koa/package.json
+++ b/classworks/artyom-tsurkan/11_koa/package.json
@@ -5,18 +5,25 @@
   "main": "src/server/app.js",
   "scripts": {
     "dev": "export NODE_ENV=development || set NODE_ENV=development&& ./node_modules/.bin/babel-node ./src/server/app.js",
-    "prod": "export NODE_ENV=production || set NODE_ENV=production&& webpack --config src/server/config/webpack.config.babel.js && ./node_modules/.bin/babel-node ./src/server/app.js"
+    "prod": "export NODE_ENV=production || set NODE_ENV=production&& webpack --config src/server/config/webpack.config.babel.js && ./node_modules/.bin/babel-node ./src/server/app.js",
+    "eslint": "eslint --ext=js --ext=jsx ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "eslint": "^4.17.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.6.1",
     "koa-webpack-dev-middleware": "^2.0.2",
     "koa-webpack-hot-middleware": "^1.0.3",
     "react-hot-loader": "^3.1.3",
@@ -35,6 +42,7 @@
     "koa-webpack": "^2.0.3",
     "koa2-history-api-fallback": "0.0.5",
     "nodemon": "^1.14.12",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
