--- a/classworks/yegor-koren/09_redux/package.json
+++ b/classworks/yegor-koren/09_redux/package.json
@@ -12,9 +12,12 @@
     "react": "^16.2.0",
     "react-classnames": "^0.1.2",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "stylelint": "^7.10.1",
     "stylelint-config-standard": "^16.0.0"
   },
