--- a/classworks/Nikita-Goncharov/12_api/package.json
+++ b/classworks/Nikita-Goncharov/12_api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_PATH=../ node src/app.js",
+    "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
