--- a/classworks/Nikita-Goncharov/12_api/package.json
+++ b/classworks/Nikita-Goncharov/12_api/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "api",
+  "name": "12_api",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/app.js"
+    "start": "nodemon src/app.js"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "joi": "^13.1.2",
     "jsonwebtoken": "^8.1.1",
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
     "koa-jwt": "^3.3.0",
-    "koa-mount": "^3.0.0",
     "koa-router": "^7.4.0",
     "nodemon": "^1.14.12"
-  },
+  }
 }
