--- a/classworks/Nikita-Goncharov/15_react-native/package.json
+++ b/classworks/Nikita-Goncharov/15_react-native/package.json
@@ -22,6 +22,7 @@
     "expo": "^25.0.0",
     "faker": "4.1.0",
     "react": "16.2.0",
-    "react-native": "0.52.0"
+    "react-native": "0.52.0",
+    "react-native-search-filter": "^0.1.3"
   }
 }
