Work in progress.

--- a/classworks/maxim-shpak/14_testing/Dockerfile
+++ b/classworks/maxim-shpak/14_testing/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:8.2
 
 EXPOSE 3001
-COPY ["./package.json", "./package-lock.json", ".eslintrc.js", ".eslintignore", "/app/"]
+COPY ["./package.json", "./package-lock.json", "/app/"]
 WORKDIR /app
 RUN npm i --quiet
 COPY ./src /app/src
