--- a/classworks/yegor-koren/11_koa/package.json
+++ b/classworks/yegor-koren/11_koa/package.json
@@ -10,6 +10,7 @@
     "babel-loader": "^7.1.4",
     "css-loader": "^0.28.10",
     "html-webpack-plugin": "^3.0.6",
+    "joi": "^13.1.2",
     "koa": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.4.0",
